# NeSLE

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  NEXT_STEPS.md  README.md  pyproject.toml
benchmarks/: gpu_vs_cpu.py  verify_correctness.py
benchmarks/legacy/: README.md
cpp/bindings/: cuda_module.cu
cpp/include/nesle/: fcs.hpp
cpp/include/nesle/cuda/: batch_step.cuh  kernels.cuh  state.cuh
cpp/src/cuda/: kernels.cu
docs/: architecture.md  benchmark-gpu-vs-cpu.md  phases.md  training.md
docs/history/: README.md
examples/: eval_smoke.py  native_ppo_train.py  sb3_train.py
notebooks/: nesle_colab_a100_training.ipynb
project/mario-rl-ram/: .gitignore  README.md  pyproject.toml
project/mario-rl-ram/docs/: ACTIONS.md  ARCHITECTURE.md  COLAB.md  NESLE_A100.md  PC_SETUP.md  REWARD.md
project/mario-rl-ram/notebooks/: cnn_lstm_7_1_training.ipynb  cnn_training.ipynb  nesle_a100_benchmark.ipynb  ram_training.ipynb
project/mario-rl-ram/src/mario_rl/: __init__.py  env.py  levels.py  nesle_bench.py  rewards.py  wrappers.py
project/mario-rl-ram/src/mario_rl/reward_profiles/: __init__.py  future_levels.py  level_1_1.py  level_7_1.py
project/mario-rl-ram/src/mario_rl/scripts/: doctor.py  evaluate.py  smoke.py  train_ppo.py
project/mario-rl-ram/tests/: test_nesle_bench.py
scripts/: build_cuda_extension.sh
scripts/legacy/: README.md
src/nesle/: __init__.py  actions.py  env.py  native_ppo.py
tests/: test_actions.py  test_env.py  test_env_multi_level.py  test_env_reset_state.py  test_fcs_parser.py  test_native_ppo.py  test_render_freshness.py
