[build-system]
requires = ["setuptools>=77", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "nesle"
version = "0.0.1"
description = "GPU-native NES learning environment for reinforcement learning"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Hamzah Azzam" }]
maintainers = [{ name = "Hamzah Azzam" }]
keywords = [
  "nes",
  "emulator",
  "cuda",
  "gpu",
  "reinforcement-learning",
  "ppo",
  "super-mario-bros",
  "gymnasium",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Emulators",
  "Topic :: Games/Entertainment",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = ["numpy>=1.26"]

[project.urls]
Homepage = "https://github.com/hbofz/NeSLE"
Repository = "https://github.com/hbofz/NeSLE"
Documentation = "https://github.com/hbofz/NeSLE/tree/main/docs"
Issues = "https://github.com/hbofz/NeSLE/issues"

[project.optional-dependencies]
rl = [
  "gymnasium>=1.0",
  "stable-baselines3>=2.0",
  "torch>=2.0",
]
legacy-mario = [
  "numpy>=1.26,<2",
  "gym>=0.25,<0.26",
  "nes-py>=8.2,<8.3",
  "gym-super-mario-bros>=7.4,<7.5",
]
dev = [
  "pytest>=8",
  "setuptools>=77",
  "wheel",
  "pybind11>=2.12",
]

[tool.setuptools.packages.find]
where = ["src"]
